# fceux

./: .gitignore  CLAUDE.md  CMakeLists.txt  INPUT_API_DOCUMENTATION.md  PROJECT_STATUS.md  PR_DESCRIPTION.md  REST_API_EMULATION_ENDPOINTS.md  api_documentation_issue.md  demo_mario_jump.sh  memory_range_issue.md  test_input_api.sh  test_input_timing.sh
docs/: BUILD_QUICKSTART.md  FCEUX_REST_API_RESEARCH_REPORT.md  REST_API.md  REST_API_DEPENDENCIES.md  REST_API_POST_ROUTE_FIX.md  UBUNTU_BUILD_SETUP.md
docs/api/: emulation.md  input.md  media.md  memory.md  openapi.yaml  quickstart.md  rom.md  system.md
docs/architecture/: 01-main-loop-and-threading.md  02-memory-access.md  03-input-system.md  04-concurrency-and-qt.md  05-build-system.md  RESEARCH_SUMMARY.md
docs/archive/: API_FEATURE_RESEARCH.md  FCEUX_CODEBASE_ANALYSIS.md  FCEUX_MEMORY_ACCESS_ANALYSIS.md
poc/command_queue_hook/: README.md  command_queue_hook.patch
poc/http_lib_build/: README.md  test_server.cpp
poc/input_injection/: README.md  input_injection.cpp  input_injection.h  test_input_injection.cpp
poc/memory_access/: README.md  memory_api.cpp  memory_api.h  memory_api.patch
poc/qt_thread_interaction/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  WorkerThread.cpp  WorkerThread.h
poc/rest_api_screenshot/: screenshot_test.cpp  video_stream_design.cpp
scripts/: ubuntu-setup.sh
src/: CMakeLists.txt  input.cpp
src/drivers/Qt/: ConsoleWindow.cpp  ConsoleWindow.h  config.cpp  fceuWrapper.cpp
src/drivers/Qt/RestApi/: CommandExecution.h  CommandQueue.cpp  CommandQueue.h  InputApi.cpp  (+17 more)
(+20 files in other folders)
